# LogLineOS-v8

./: .gitignore  Agents.md  Architecture.md  Cargo.toml  logline_v8_tasklist.json  sample_span.json
crates/common/: Cargo.toml
crates/common/src/: lib.rs
crates/gateway/: Cargo.toml
crates/gateway/src/: main.rs
crates/hostcalls/: Cargo.toml
crates/hostcalls/src/: lib.rs
crates/identity/: Cargo.toml
crates/identity/src/: lib.rs
crates/loader/: Cargo.toml
crates/loader/src/: lib.rs
crates/policy/: Cargo.toml
crates/policy/src/: lib.rs
crates/quality/: Cargo.toml
crates/quality/src/: lib.rs
crates/router/: Cargo.toml
crates/router/src/: lib.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: lib.rs
crates/trajectory/: Cargo.toml
crates/trajectory/src/: lib.rs
crates/validators/: Cargo.toml
crates/validators/src/: lib.rs
