[package]
name = "logline_gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
logline_common = { path = "../common" }
logline_runtime = { path = "../runtime" }
logline_validators = { path = "../validators" }
thiserror = "1"
