[package]
name = "logline_gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
logline_common = { path = "../common" }
logline_runtime = { path = "../runtime" }
logline_validators = { path = "../validators" }
thiserror = "1"
logline_identity = { path = "../identity" }
prometheus = "0.13"
tower-http = { version = "0.5", features = ["cors"] }
logline_policy = { path = "../policy" }
logline_router = { path = "../router" }
logline_hostcalls = { path = "../hostcalls" }
parking_lot = "0.12"
uuid = { version = "1", features = ["v4"] }
urlencoding = "2"
governor = { version = "0.6", default-features = false, features = ["std"] }
tokio-util = { version = "0.7", features = ["io"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
once_cell = "1"
