[package]
name = "logline_identity"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
thiserror = "1"
jsonwebtoken = "9"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
rand = "0.8"
sha2 = "0.10"
base64 = "0.22"
once_cell = "1"
uuid = { version = "1", features = ["v4"] }
