[package]
name = "logline_runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
logline_common = { path = "../common" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
uuid = { version = "1", features = ["v4"] }
thiserror = "1"
